Fixed issue where scrip was not summarising by phase

--- a/Examples_forR4March/R_4Mar17.Rmd
+++ b/Examples_forR4March/R_4Mar17.Rmd
@@ -65,7 +65,7 @@ df <- spread(df, Fly, Val) %>%
 }
 
 if (phasesummary==1) {
-df1 <- group_by(df, Min) %>%
+df <- group_by(df, Min) %>%
   summarise_all(funs(mean(., na.rm=TRUE), median(., na.rm=TRUE), min(., na.rm=TRUE), max(., na.rm=TRUE),
                       count=sum(!is.na(.)), sum(., na.rm=TRUE))) %>%
   mutate_if(grepl("_sum", names(.)), funs(cumsum=cumsum(.)))
