--- a/MomEffect/Modelling/StartExplorer.Rmd
+++ b/MomEffect/Modelling/StartExplorer.Rmd
@@ -10,9 +10,13 @@ runtime: shiny
 
 ```{r global, include=FALSE}
 if (!require(pacman)) install.packages("pacman")
-pacman::p_load(plyr, dplyr, tidyr, DT, data.table, lubridate, ggplot2)
+pacman::p_load(plyr, dplyr, tidyr, DT, data.table, lubridate, ggplot2, flexdashboard, knitr)
 
-wd <- "~/Desktop/=/Results and Analysis/Cognition_KineticEffect/Gr28bD/TempCurve/R_TMV_TempCurve/Gr28bd"  ##Change accordingly
+# If you ge an error saying "'is_latex_output' is not an exported object from 'namespace:knitr'"
+#update knitter with the line bellow
+#install.packages('knitr', repos = c('http://rforge.net', 'http://cran.rstudio.org'), type = 'source')
+
+wd <- "/Users/neo2478/Documents/GitHub/analysis_tracking/MomEffect/Modelling"  ##Change accordingly
 
 setwd(wd)
 
@@ -20,40 +24,22 @@ filenames <- list.files(wd, pattern="*.csv") ## Keep in folder only the .csv fil
 ```
 
 ```{r load and massage data}
-df_mean <- sapply(filenames,
-             read.csv,
-             sep=",",
-             dec = ".",
-             header=TRUE,
-             stringsAsFactors = FALSE,
-             simplify = FALSE) %>%
-  ldply(.) %>%
-  mutate(Name=gsub("\\..*", "", .id)) %>%
-  separate(Name, c("Experiment", "Sex", "Fly"), "_") %>%
-  select(-.id) %>%
-  gather(Time, Speed, -c(Temp, Min, Experiment, Sex, Fly)) %>%
+df <- lapply(filenames, function(x) {
+ read.csv(x, stringsAsFactors = FALSE) %>%
+    mutate(Min=row_number()) %>%
+    gather(Mother, Speed, -phase, -Min) %>%
+    mutate(Mother=gsub("X", "", Mother)) %>%
+    rename(Temp=phase)
+  })
+names(df) <- filenames
+df <- do.call("rbind", df) %>%
+  mutate(Name=row.names(.),
+         Name=gsub("\\..*", "", Name)) %>%
+  separate(Name, c("Experiment", "Sex", "Condition"), "_") %>%
   filter(!is.na(Speed)) %>%
-  arrange(Experiment, Sex, Fly, Time, Min, Temp) %>%
-  group_by(Experiment, Sex, Fly, Time)
-
-grps <- group_indices(df_mean)
-
-df_mean <- df_mean %>%
-  ungroup() %>%
-  mutate(FlyID= grps) %>%
-  group_by(Experiment, Sex) %>%
-  mutate(FlyID=FlyID-min(FlyID)+1) %>%
-  ungroup() %>%
-  mutate(Time=hm(Time),
-         Hour=hour(round_date(as_datetime(Time), unit="hour"))) %>%
-  mutate(ToD=case_when(.$Hour < 12 ~ "Morning",
-                       .$Hour >= 12 & .$Hour < 15 ~ "Siesta",
-                       .$Hour >= 15 & .$Hour < 18 ~ "Afternoon",
-                       .$Hour >= 18 ~ "Evening")) %>%
-  select(Experiment, Sex, Fly, FlyID, Hour, ToD, Min, Temp, Speed) %>%
-  filter(Min>7, Experiment=="CurveFail") %>%
+  arrange(Experiment, Condition, Mother, Sex, Min, Temp) %>%
   group_by(Temp) %>%
-  summarise(Speed=mean(Speed, na.rm=TRUE)) %>%
+  summarise(Speed=mean(Speed)) %>%
   ungroup()
 ```
 
@@ -61,24 +47,24 @@ df_mean <- df_mean %>%
 # Error function
 erf <- function(x) 2 * pnorm(x * sqrt(2)) - 1
 
-# Gaussian
-model_gauss <- function(Temp, a, b, c) {
-  a*exp(-0.5*(abs(Temp-b)/c)^2)
-}
-
 # Quadratic
 model_quad <- function(Temp, a, b, c) {
   (a*Temp^2) + (b*Temp) + c
 }
 
+# Gaussian
+model_gauss <- function(Temp, a, b, c) {
+  a*exp(-0.5*(abs(Temp-b)/c)^2)
+}
+
+# Skewed Gaussian
+model_skewedgauss <- function(Temp, a, b, c, d) {
+  a*exp(-0.5*(abs(Temp-b)/c)^2)*(1 + erf((d*(Temp-b))/(sqrt(2)*c)))
+}
+
 # Modified Gaussian
 model_modgauss <- function(Temp, a, b, c, d) {
   a*exp(-0.5*(abs(Temp-b)/c)^d)
-}
-
-# Weibull
-model_weibull <- function(Temp, a, b, c, d) {
-  ( a*((d-1)/d)^((1-d)/d) )*( ( ((Temp-b)/c) + ((d-1)/d)^(d-1) )^(d-1) )*exp( -( ((Temp-b)/c) + ((d-1)/d)^(1/d) )^d ) + (d-1)/d
 }
 
 # Exponentially modified Gaussian
@@ -108,7 +94,7 @@ Column {.sidebar}
 
 wellPanel(
   selectInput("models", label = "Model:",
-              choices = c("Gaussian", "Quadratic", "Modified Gaussian", "Weibull",
+              choices = c("Quadratic", "Gaussian", "Skewed Gaussian", "Modified Gaussian",
                           "Exponential Gaussian", "Logan 6", "Logan 10"), selected = "Gaussian"),
   
   sliderInput("temp", label = "Temperature Range:",
@@ -116,25 +102,25 @@ wellPanel(
   )
 
 renderUI({
-  if (input$models %in% c("Gaussian", "Quadratic", "Modified Gaussian", "Weibull", "Exponential Gaussian"))
+  if (input$models %in% c("Gaussian", "Quadratic", "Modified Gaussian", "Skewed Gaussian", "Exponential Gaussian"))
     sliderInput("a", label = " a:",
                 min = -50, max = 50, value = 1, step = 0.001)
   })
 
 renderUI({
-  if (input$models %in% c("Gaussian", "Quadratic", "Modified Gaussian", "Weibull", "Exponential Gaussian"))
+  if (input$models %in% c("Gaussian", "Quadratic", "Modified Gaussian", "Skewed Gaussian", "Exponential Gaussian"))
     sliderInput("b", label = " b:",
                 min = -50, max = 50, value = 1, step = 0.001)
   })
 
 renderUI({
-  if (input$models %in% c("Gaussian", "Quadratic", "Modified Gaussian", "Weibull", "Exponential Gaussian"))
+  if (input$models %in% c("Gaussian", "Quadratic", "Modified Gaussian", "Skewed Gaussian", "Exponential Gaussian"))
     sliderInput("c", label = " c:",
                 min = -100, max = 100, value = 1, step = 0.001)
   })
 
 renderUI({
-  if (input$models %in% c("Modified Gaussian", "Weibull", "Exponential Gaussian"))
+  if (input$models %in% c("Modified Gaussian", "Skewed Gaussian", "Exponential Gaussian"))
     sliderInput("d", label = " d:",
                 min = -50, max = 50, value = 1, step = 0.001)
   })
@@ -181,17 +167,17 @@ Column
 -----------------------------------------------------------------------
 
 ```{r data}
-df <- reactive({
+df_model <- reactive({
   Temp <- input$temp[1]:input$temp[2]
   
-  if (input$models=="Gaussian") {
-    Speed=model_gauss(Temp, input$a, input$b, input$c)
-  } else if (input$models=="Quadratic") {
+  if (input$models=="Quadratic") {
     Speed=model_quad(Temp, input$a, input$b, input$c)
+  } else if (input$models=="Gaussian") {
+    Speed=model_gauss(Temp, input$a, input$b, input$c)
+  }  else if (input$models=="Skewed Gaussian") {
+    Speed=model_skewedgauss(Temp, input$a, input$b, input$c, input$d)
   } else if (input$models=="Modified Gaussian") {
     Speed=model_modgauss(Temp, input$a, input$b, input$c, input$d)
-  } else if (input$models=="Weibull") {
-    Speed=model_weibull(Temp, input$a, input$b, input$c, input$d)
   } else if (input$models=="Exponential Gaussian") {
     Speed=model_expgauss(Temp, input$a, input$b, input$c, input$d)
   } else if (input$models=="Logan 6") {
@@ -208,9 +194,9 @@ df <- reactive({
 
 ```{r}
 renderPlot({
-  ggplot(df(), aes(x=Temp, y=Speed)) +
+  ggplot(df_model(), aes(x=Temp, y=Speed)) +
     geom_line() +
-    geom_line(data=df_mean, aes(x=Temp, y=Speed), alpha=0.5, color="red") +
+    geom_line(data=df, aes(x=Temp, y=Speed), alpha=0.5, color="red") +
     theme_bw()
 })
 ```
